Calculator displays result

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <Folder Include="Class\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" />
+  </ItemGroup>
 </Project>
